# vccm-python-client

./: README.md  pyproject.toml  requirements.txt
examples/: authorization_settings.py
examples/activity/: eg_01_activity_list.py  eg_02_activity_get.py  eg_03_activity_submit.py  eg_04_activity_report.py  eg_05_loss_export_submit.py  eg_06_activity_cancel.py  eg_07_activity_resubmit.py
examples/analysis/: eg_11_bulk_import.py  eg_12_bulk_download.py  eg_13_export_frequency_params.py
examples/auth/: backend_dict.py  backend_file.py  web_dict.py  web_file.py
examples/calculations/: eg_01_analysis_request.py  eg_02_analysis_file.py  eg_03_perturbations.py  eg_04_analysis_custom_sizes.py  eg_05_analysis_request.py  eg_06_non_zero_gross_loss.py  eg_08_loss_by_ay.py  eg_09_non_zero_gross_loss.py  eg_10_custom_ceded_losses_export.py
examples/currency/: 01_currency_table.py
examples/events/: eg_01_get.py  eg_02_list.py  eg_03_create.py  eg_04_copy.py  eg_05_rename.py  eg_06_lock.py  eg_07_versions.py  eg_08_delete.py  eg_09_description.py  eg_10_get_data.py  eg_11_bulk_import.py  eg_12_bulk_download.py
examples/migration/: migrate_assets.py  migrate_assets_161.py  migrate_requests.py  migrate_requests_161.py
examples/pdca/: eg_00_pdca_API_credits.py  eg_02_data_standardization.py
examples/portfolios/: eg_01_get.py  eg_02_list.py  eg_03_create.py  eg_04_copy.py  eg_05_rename.py  eg_06_lock.py  eg_07_versions.py  eg_08_delete.py  eg_09_description.py  eg_10_get_data.py  eg_11_bulk_import.py  eg_12_bulk_download.py  eg_13_bulk_import_advanced.py
(+55 files in other folders)
